objects/BIIB_Trigger_Dispatcher__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Add the sobject API Name.</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordinal__c</fullName>
        <description>Add the class order to call.</description>
        <label>Ordinal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prevent_Recursion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is true then this handler will be called once per event.</description>
        <inlineHelpText>Check, if you want to prevent this handler execute multiple times.</inlineHelpText>
        <label>Prevent Recursion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Handler_Class_Name__c</fullName>
        <description>Add the class name to call from trigger.</description>
        <label>Trigger Handler Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trigger Dispatcher</label>
    <pluralLabel>Trigger Dispatchers</pluralLabel>
</CustomObject>